# pants-vs-poetry

./: .gitignore  README.md  pants.toml
Libraries/libA/: BUILD  pyproject.toml
Libraries/libA/liba/: main.py  version.py
Libraries/libB/: BUILD  pyproject.toml
Services/service1/: BUILD  pyproject.toml
Services/service2/: BUILD  pyproject.toml
